versioned_docs/version-3.1.1/HR Processes/Leave.md
---
id: p3-1-leave
sidebar_label: Leave
title: Leave
---

The **HR** Profile Page is designed to provide Human Resources personnel with a consolidated view of their profile, leave balances, and important organizational updates. 

It provides HR managers with quick access to their profile along with key company events and requests. 

The page is organized into the following sections: 

Navigation Menu (Left Panel) provides access to key modules. 

- Leave 

- Attendance 

- Performance 

- Travel 

- Hotel 

- Recruitment 

- Employment 

- Department 

- Company

- Reports

Profile & Leave Balance (Center Panel) shows HR details along with leave entitlements (earned, casual, sick, and short leave). 

Company Updates (Right Panel): Displays upcoming holidays, work anniversaries, birthdays, and information about employees who are out of the office. 

Quick Actions (Top Panel): Enables HR to send requests, review staff requests, view announcements, and track achievements. 

### Leave Module

The Leave Module allows HR to view, track, and manage different types of employee leaves in a structured manner. It provides a clear summary of leave balances, approved and requested leaves, and also includes a holiday calendar for better planning. 

**Key Features for HR** 

**Apply Leave**
 
HR can apply for leave directly through this option by selecting the leave type, dates, and reason. 

**Leave History** 
Provides a detailed record of all past leaves applied by HR, showing status (approved, rejected, pending). 

**Monthly Leave History** 
Shows leave records for a chosen month, enabling HR to monitor usage and identify monthly patterns. 

**Annual Leave Roster** 
Enables HR to add and plan his leave in advance through a yearly calendar view, making it easier to organize 

**Team Leave History** 
Enables HR to view leave history of their team members, supporting team-level planning and approvals. 

**Staff Leave** 
Allows HR to review and manage leave requests from employees. This helps HR monitor staff availability and ensure smooth workflow. 

### Options Available under Staff Leave 

**Apply Leave for Employee** 
This option allows HR to apply or adjust leave on behalf of an employee. It is particularly useful when an employee has applied for a certain number of days, the reporting manager has approved it, but later the employee decides to use only part of the approved leave. In such cases, HR can modify the leave dates to reflect the actual days taken. 

From this page, HR can also navigate to **Staff Leave History, Staff Leave Balance, and Staff Monthly Leave History** to track and manage employee leaves effectively. 

**Staff Leave History**
Displays a complete log of all leave applications submitted by employees, along with their approval status. This helps HR keep track of past requests for reference and compliance. 

In the Staff Leave History section, HR is provided with multiple tools to search, filter, and export employee leave records. 

**Available Option** 

**Export to Excel** – Allows HR to download the leave history records in Excel format for reporting and record-keeping. 

**Year Selection (Dropdown)** – HR can select the required year (e.g., 2025) to view leave history for that period. 

**Search by Name** – HR can search for a specific employee by entering their name. 

**Date Filters (From Date / To Date)** – HR can choose a date range to filter leave records within specific periods. 

**Search Button** – Executes the search based on entered criteria (name, date, or both). 

**Reset Button** – Clears all filters and reloads the full leave history. 

**Print Button**  – Prints the displayed leave history records directly. 

**Staff Monthly Leave History** 
Shows employee leave details for a selected month. HR can use this feature to review monthly patterns and manage attendance more effectively. 

In the Staff monthly Leave History section, HR is provided with multiple tools to search, filter, and export employee leave records. 

**Staff Leave Balance** 
Provides HR with a clear view of the available leave balances for each employee across categories such as earned leave, casual leave, sick leave, short leave, and loss of pay. This helps in making informed decisions while approving requests. 

**Top Panel Options** 

**Export to Excel** – Download the complete staff leave balance report in Excel format for offline review or reporting. 

**Search by Name** – Enter an employee’s name to quickly locate their leave balance. 

**Select Department** – Filter records department-wise to view staff balances specific to a department. 

**Search** – Apply the selected filters (name or department). 

**Reset** – Clear all filters and reload the full list of employees. 

**Staff Annual Leave Roster** 

The Staff Annual Leave Roster allows employees to plan their leaves in advance, and HR can view, manage, and monitor leave schedules throughout the year. 

**Purpose** 

- Enables staff to plan their leaves ahead of time. 

- Provides HR with a month-wise overview of leave distribution. 

- Helps in avoiding overlap and managing team availability. 

- Page Layout & Options 

**Navigation Tabs (Top Panel)** 

**ALL** – Displays all staff leaves for the year in a single view. 

**Month Tabs (JAN – DEC)** – Allows HR to view staff leaves month by month. Selecting a month shows only the leaves planned in that month. 

**How to Use** 

- View Annual Roster 

- Select ALL to see all staff leave plans for the year. 

- Check Monthly Leave Plans 

- Click on any month tab (e.g., MAY) to filter and view only the leave entries for that specific month. 

- HR can monitor which employees are on leave in a given month to ensure smooth workflow. 

### Holiday Calendar 

The Holiday Calendar allows HR to create, manage, and publish official holidays for the organization each year. 

**Purpose** 

- To define all company-wide holidays in advance. 

- To ensure staff and departments have a clear view of applicable holidays. 

- To provide HR with an easy way to add, edit, or delete holidays. 

**Add Holiday (Left Panel)** 

Click ➕ Add Holiday, fill in the details, and save. The new holiday will appear in the preview list. 

**Holiday Name** – Select the holiday name from the dropdown or enter a new one. 

**Date** – Choose the date of the holiday using the calendar picker. 

**Day** – Auto-filled based on the date selection. 

**Holiday Applicable in** – Choose the locations where the holiday will apply (e.g., New Delhi & Bangalore). 

**Buttons & Controls** 

**(Add)** – Opens the dialog to add a new holiday. 

**(Delete Record)** – Deletes the selected holiday. 

**(Navigation Arrows)** – Move between previously added holidays. 

**Holiday Calendar Preview (Right Panel)** 

Displays the complete holiday list for the year. 

**Date** – The holiday date. 

**Day** – Day of the week. 

**Holiday** – Holiday name. 

**Applicable In** – Location(s) where the holiday is valid. 

**Delete All** – Removes all holidays from the calendar, allowing HR to recreate it. 

### Leave Report  
 
**Overview** 

The Leave Report feature allows authorized users to view and export employee leave details based on department, date range, and specific roles. The report can be generated on-screen and exported as an Excel file, which is delivered to the user via email. 
 
**Access Control** 

This feature is available only to users with specific roles/permissions configured in the HRMS system. 
 
**How to Access the Leave Report**

- Log in to the HRMS application using your credentials. 
- From the side navigation menu, click on Leave. 
- On the Leave page, click the Leave Report button. 

**Leave Report Filter** 
After clicking on the Leave Report, the Leave Report Filter screen opens. 

**Available Filters**

**Department** 
- Select the department for which the leave report is required. 
- Start Date 
- Choose the start date for the leave period. 
- End Date 
- Choose the end date for the leave period. 
- Employee Selection 
- Select individual employees from the list, or 
- Use Select All / Deselect All to quickly include or exclude all employees. 
- The employee list displayed is based on the selected department. 

**Generate Leave Report**

- After selecting the required filters, click Generate Report. 
- The system displays the Leave Report in a tabular format. 

**The report shows**

- Employee names 
- Dates 
- Leave types (e.g., CL, SL, EL, BL, SHL, Half-Day leaves) 
- Color-coded leave indicators for easy identification 
- Export Leave Report to Excel 
- On the Leave Report screen, click Export to Excel. 
- The system processes the request. 
- An email notification is sent to the logged-in user. 
- The email contains the Leave Report as an Excel attachment, including all selected filters and leave details. 

This ensures secure delivery and allows users to download and store the report for offline use. 

## Cancel Approved Leave 

The Cancel Approved Leave feature allows HR to cancel leave requests that have already been approved. This provides flexibility when employees need to withdraw leave due to changing circumstances, while ensuring accurate leave records and workforce planning. 

**When is this Used?** 

- An employee has applied for leave  

- The leave has been approved by the Reporting Person (RP)  

- The employee requests cancellation of the approved leave  

- In such cases, HR can cancel the leave on behalf of the employee. 

**Steps to Cancel Approved Leave** 

- Navigate to the Leave module  

- Click on Staff Leave History  

- Search for the required employee  

- Click on the Calendar icon next to the employee record  

- Select the leave dates to cancel:  

    - Cancel single day leave, or Cancel multiple days leave  

- Confirm the cancellation 

- The selected leave days are successfully canceled  

- Leave balances are automatically updated  

- The cancellation is reflected in:  

    - Employee leave records  

    - Reporting Person (RP) view 

**Notifications** 

Email notification is sent to:  

- The Employee  

- The Reporting Person (RP) 


 
 